# git-demo

./: CMakeLists.txt  file-tree.txt  test.txt
.cache/clangd/index/: binary_codes.cpp.F21EC4D1EE965CE8.idx  binary_codes.h.ACA57B163DB6A7C0.idx  gf2p.cpp.0B2FDF149B61058F.idx  gf2p.h.14CA3532B1DA9DD4.idx  main.cpp.C426FF5980EE406D.idx  matrix_utils.cpp.7131B2285CF88F60.idx  matrix_utils.h.699B477421C2B152.idx  nonbinary_codes.cpp.DA9A8593620D692E.idx  nonbinary_codes.h.8CFCDE91B346B027.idx
.github/: copilot-instructions.md
NB_LDPC/: file_tree.txt
NB_LDPC/BP-decoder-for-NB_LDPC-codes-master/: 20x100x328.txt  4x8x50.txt  50x100x328.txt  50x100x55.txt  H_delta.alist  H_gamma.alist  H_gamma.txt  PEG_LDPC  Simulate_bpsk.m  Simulate_qam.m  Test_Decoder_Sanity.m  alist2sparse.m  alist2sparse1.m  bits_smbl_msg.m  decode_soft.mexw64  demodulate_bpsk.m  demodulate_qam.m  h2g.c  h2g.m  peg2lad.m  qc2sparse.m  simulate.alist  simulate2x7x592GF_64.alist  simulate_C.alist  simulate_D.alist  simulate_temp.alist  sparse2alist.m
NB_LDPC/BP-decoder-for-NB_LDPC-codes-master/build_soft_decoder_llr/: LDPC.h  build.txt  decode_soft.cpp
NB_LDPC/BP-decoder-for-NB_LDPC-codes-master/common/: GaloisField.h  Matrix.h  common.h
NB_LDPC/NB-LDPC-toolbox-master/: H_delta.txt  H_gamma.alist  H_gamma.txt  alist2matrix_nb.m  build_GF.m  decode_soft.mexw64  matrix2alist_nb.m  show_matrix.m
NB_LDPC/NB_LDPC_FB_public-master/: NB_LDPC.c  README.md  auto_simulate_and_plot.py  auto_simulate_paper.py  bubble_decoder.c  channel.c  convert_alist.py  essai  init.c  init.c~  init.w~  makefile  run_simulation.sh  start.sh
NB_LDPC/NB_LDPC_FB_public-master/include/: channel.h
NB_LDPC/NB_LDPC_FB_public-master/matrices/: H_gamma.txt
NB_LDPC/Non-Binary-GF-q-LDPC-master/: Work2.opt
NB_LDPC/Non-Binary-GF-q-LDPC-master/NonBinary_EXIT/: Calc_CND_Empirical.m  Calc_CND_Minus_Empirical.m  Calc_J.m  Calc_J_Minus.m  Calc_J_R.m  Calc_J_R_Minus.m  Calc_VND_Empirical.m  Calc_VND_Minus_Empirical.m  CompleteLambdas.m  Compute_CND_Approximation.m  Compute_J_Approximation.m  Compute_J_R_Approximation.m  Expected_log.m  GFqAdd.m  GFqConv.m  GFqMul.m  GaussianSamples.m  InitialSamples.m  J_Empirical.m  LLR.m  LambdaLinProgDesign.m  Load_CND_and_JR_Data_From_File.m  Load_J_Pols.m  Myfzero.m  Readme.txt  RhoLinProgDesign.m  Store_CND_and_JR_Data_To_File.m  Store_J_Pols.m  myln.m  unLLR.m
NB_LDPC/simulate/: Simulate_bpsk.m  Simulate_qam.m
include/gf2p/: gf2p.h
include/ldpc_codes/: binary_codes.h  nonbinary_codes.h
include/utils/: matrix_utils.cpp  matrix_utils.h
peg-unige/: Acleanup.p  MainPEG  Reg_6.deg~
src/: main.cpp
src/gf2p/: gf2p.cpp
src/ldpc_codes/: binary_codes.cpp  nonbinary_codes.cpp
src/utils/: matrix_utils.cpp
